[metadata]
name = teacher
version = attr: teacher.__version__
description = attr: teacher.__doc__
long_description = file: README.md
author = Julien Palard
author_email = julien@palard.fr
url = https://github.com/JulienPalard/teacher
keywords = i18n, teaching
license = MIT License
classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options]
py_modules = teacher
python_requires = >= 3.6
